--- a/dicee.html
+++ b/dicee.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Dicee</title>
+    <title>DiceeGame</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css?family=Indie+Flower|Lobster" rel="stylesheet">
 
@@ -14,20 +14,22 @@
 
       <div class="dice">
         <p>Player 1</p>
-        <img class="img1" src="">
+        <img class="img1" src="images/dice6.png">
       </div>
 
       <div class="dice">
         <p>Player 2</p>
-        <img class="img2" src="">
+        <img class="img2" src="images/dice6.png">
       </div>
 
     </div>
+
+    <script src="index.js" charset="utf-8"></script>
 
 
   </body>
 
   <footer>
-     Rahul Pal
+    By Rahul Pal
   </footer>
 </html>
